[package]
name = "pod_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.82", features = ["rustls-tls"] }
k8s-openapi = { version = "0.18", features = ["v1_23"] }
tui = "0.19"
crossterm = "0.26"
color-eyre = "0.6"
